installed devise cf.2-2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
   </head>
 
   <body>
+
+    <!-- ==========flashメッセージ========== -->
+    <% if flash[:notice] %>
+      <p><%= flash[:notice] %></p>
+    <% end %>
+    <% if flash[:alert] %>
+      <p><%= flash[:alert] %></p>
+    <% end %>
+    <!-- ==========ここまでflashメッセージ========== -->
+
     <%= yield %>
   </body>
 </html>
