installed bootstrap following official document cf.2-3

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,12 @@
 
     <!-- ==========flashメッセージ========== -->
     <% if flash[:notice] %>
-      <p><%= flash[:notice] %></p>
+      <div class="alert alert-info"><%= flash[:notice] %></div>
     <% end %>
     <% if flash[:alert] %>
-      <p><%= flash[:alert] %></p>
+      <div class="alert alert-danger"><%= flash[:alert] %></div>
     <% end %>
     <!-- ==========ここまでflashメッセージ========== -->
-
     <%= yield %>
   </body>
 </html>
