design signup-page cf.2-7 before adding preview function of image

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,4 +4,10 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+@import "common";
+
+// ようこそMchatへのSCSS
 @import "top";
+
+// アカウント作成ページのCSS
+@import "users/sign_up";
