--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,6 +5,8 @@
   <div class='container'>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class:"mt-5" }) do |f| %>
       <%= devise_error_messages! %>
+
+      <%# 選択した画像をプレビューする機能についてはrailsのバージョン違いの関係からおそらく2-7通りのコピペでは不可能 %>
       <label for="file_photo" class="rounded-circle userProfileImg">
         <div class="userProfileImg_description">画像をアップロード</div>
         <i class="fas fa-camera fa-3x"></i>
