installed redis and wrote the difference designed an form of messagepage cf.video1 until 54:00

--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -39,6 +39,8 @@
     }
   }
   .messagesArea {
+    // video1では以下のようになっている
+    // overflow-y: hidden;
     overflow: scroll;
     height: 72vh;
     .message {
