--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -11,12 +11,16 @@
       <%= render @chat_messages %>
     </div>
   </div>
-  <form class="messageInputForm">
-    <div class='container'>
-      <input type="text" data-behavior="room_speaker" class="messageInputForm_input" placeholder="メッセージを入力...">
+
+  <%= form_with(model: messages_path, local: true) do |form| %>
+
+    <%= form.hidden_field :room_id, value: @chat_room.id %>
+
+    <div class="input-group">
+      <%= form.text_field :content, placeholder: "Type your message here...", class: 'form-control' %>
+      <div class="input-group-append">
+        <%= form.submit "Add Message", class: "btn btn-primary" %>
+      </div>
     </div>
-    <%# youtubeの動画では以下のボタンで送信をしているが、techpitでは上のinputからエンターをして送信をする。ここの違いでバグがで発生する可能性有。
-    現状youtubeの動画ではそもそもform_withを使ってメッセージのフォームタグを出しているのでtechpitとは構造が違う %>
-    <%# <%= form.submit "メッセージを送信する", class: "btn btn-primary"%>
-  </form>
+  <% end %>
 </div>
