--- a/app/assets/stylesheets/users/sign_up.scss
+++ b/app/assets/stylesheets/users/sign_up.scss
@@ -1,4 +1,4 @@
-$main-color: #fd5068;
+$main-color: #60412b;
 $main-text-color: #fff;
 
 body {
@@ -22,7 +22,7 @@ body {
     margin: 0 auto 10px auto;
     width: 100px;
     height: 100px;
-    background: #f85a6f;
+    background: #60412b;
     display: flex;
     cursor: pointer;
     align-items: center;
