--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="loginPage_contents">
       <h1 class="h4 loginPage_contents_title">M chatを始めよう！</h1>
-      <p>M chatとは社内でのコミュニケーション、社外でのコミュニケーションをより円滑にするメッセージアプリです。</p>
+      <p class="loginPage_contents_text">M chatとは社内でのコミュニケーション、社外でのコミュニケーションをより円滑にするメッセージアプリです。</p>
       <%= link_to "メールアドレスでログインする", new_user_session_path, class: "btn loginPage_contents_btn" %>
     </div>
   </div>
