--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -19,7 +19,7 @@
       left: 40px;
       border: 5px solid;
       border-radius: 4px;
-      border-color: transparent transparent #fd5068 #fd5068;
+      border-color: transparent transparent #60412b #60412b;
       transform: rotate(45deg);
     }
     .chatPartner {
