--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -58,7 +58,7 @@
         box-shadow: 0px 3px 8px #aaa, inset 0px 2px 3px #fff;
         transition: color 0.5s;
         &:hover {
-          color: #fd5068;
+          color: #60412b;
         }
       }
     }
