--- a/app/assets/stylesheets/users/sign_in.scss
+++ b/app/assets/stylesheets/users/sign_in.scss
@@ -1,7 +1,7 @@
 .signinPage {
   margin-top: 10vh;
   .title {
-    color: #fd5068;
+    color: #60412b;
     margin: 20px 0;
     text-align: center;
   }
@@ -10,7 +10,7 @@
     height: 120px;
     border-radius: 50%;
     margin: 0 auto;
-    background: #fd5068;
+    background: #60412b;
     color: #fff;
     display: flex;
     align-items: center;
@@ -20,7 +20,7 @@
     padding: 12px;
     width: 200px;
     border-radius: 21px;
-    background: #fd5068;
+    background: #60412b;
     color: #fff;
     text-align: center;
     border: none;
