--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,12 @@
-<nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top">
+<nav class="navbar navbar-expand-md navbar-light fixed-top">
 
 
-    <a href="#" class="navbar-brand text-light font-weight-bold">M Chat</i></a>
+    <a href="#" class="title navbar-brand text-light font-weight-bold">M Chat</i></a>
     <button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#nav"><span class="navbar-toggler-icon"></span></button>
 
 
     <div class="collapse navbar-collapse justify-content-between" id="nav">
-       <form action="#" class="search">
+       <%# <form action="#" class="search">
           <input
             type="text"
             class="search__input"
@@ -15,6 +15,14 @@
           <button class="search__button">
             <i class="fas fa-search text-muted"></i>
           </button>
+        </form> %>
+        <form class="form-inline ml-3">
+            <div class="input-group">
+                <input type="text" class="form-control mr-2 search-box" placeholder="ユーザー名で検索"">
+                <div class="input-group-append">
+                    <button type="button" class="search-button"><i class="fas fa-search text-muted"></i></button>
+                </div>
+            </div>
         </form>
         <ui class="navbar-nav ">
             <%= link_to "チャット一覧", "#", class: "nav-link text-light font-weight-bold px-3" %>
@@ -24,16 +32,7 @@
 </nav>
 
 
-        <form class="form-inline ml-3">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search">
-                <div class="input-group-append">
-                    <button type="button"><i class="fas fa-search text-muted"></i></button>
-                </div>
-            </div>
-        </form>
-    </div>
-</nav>
+
 
 <div class="topPage">
   <section id="team" class="pb-5">
@@ -46,7 +45,7 @@
                           <div class="card-body text-center">
                               <p><img class=" img-fluid" src="<%= user.img_name %>" alt="card image"></p>
                               <h4><%= link_to user.name, user_path(user[:id]), class: "card-title" %></h4>
-                              <p class="card-text"><%= user.self_introduction %></p>
+                              <p class="card-text"><%= user.email %></p>
                               <%= form_tag :chat_index, method: :post do %>
                                 <input name="user_id" type="hidden" value="<%= user.id %>" />
                                 <%= submit_tag 'チャットを開く', class: "btn btn-primary btn-sm mb-2" %>
