added message null validation for backend and frontend(activate btn)

--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -24,7 +24,7 @@
     <div class="input-group">
       <%= form.text_field :content, placeholder: "Type your message here...", class: 'form-control' %>
       <div class="input-group-append">
-        <%= form.submit "Add Message", class: "btn btn-primary" %>
+        <%= form.submit "Add Message", id: "message-button", class: "btn disabled" %>
       </div>
     </div>
   <% end %>
