--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -1,4 +1,3 @@
-// Place all the styles related to the chat controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
@@ -68,13 +67,14 @@
           border-right: 10px solid #f1f1f1;
         }
       }
-      &_current_user {
-        background: #fd5068;
-        color: #fff;
-        &:before {
-          border-right: 10px solid #fd5068;
-        }
-      }
+      // 受信直後はページを更新しないと相手のメッセージにも以下スタイルが適用されてしまうため、一度スキップ
+      // &_current_user {
+      //   background: #fd5068;
+      //   color: #fff;
+      //   &:before {
+      //     border-right: 10px solid #fd5068;
+      //   }
+      // }
     }
   }
   .messageInputForm {
@@ -88,4 +88,16 @@
       border: none;
     }
   }
+}
+
+.btn {
+  background-color: #60412b;
+  color: #fff;
+}
+
+.disabled {
+  background-color: #6c757d;
+  border-color: #6c757d;
+  color: #495057;
+  cursor: auto;
 }
