--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -45,7 +45,7 @@
       <div class="container">
           <div class="row">
             <% @users.each do |user| %>
-              <div class="col-xs-12 col-sm-4 col-md-3">
+              <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                   <div class="user-box">
                       <div class="card">
                           <div class="card-body text-center">
