changed design of navbar

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,10 +2,10 @@
 
 
     <a href="#" class="title navbar-brand text-light font-weight-bold">M Chat</i></a>
-    <button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#nav"><span class="navbar-toggler-icon"></span></button>
+    <%# <button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#nav"><span class="navbar-toggler-icon"></span></button> %>
 
 
-    <div class="collapse navbar-collapse justify-content-between" id="nav">
+    <div id="nav">
        <%# <form action="#" class="search">
           <input
             type="text"
