--- a/app/assets/stylesheets/users/index.scss
+++ b/app/assets/stylesheets/users/index.scss
@@ -10,6 +10,30 @@
   background-color: #3c455c;
 }
 
+#nav {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+@media screen and (max-width: 767px) {
+  .navbar {
+    display: flex;
+    flex-direction: column;
+  }
+  .title {
+    font-size: 40px;
+    margin-bottom: 10px;
+  }
+  #nav {
+    display: flex;
+    flex-direction: column;
+    margin-left: 0;
+  }
+  .topPage {
+    margin-top: 160px;
+  }
+}
+
 a {
   text-decoration: none !important;
 }
