--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -5,6 +5,7 @@
   input[type="text"]:focus {
     outline: 0;
   }
+  background-color: #fff;
   .header {
     display: flex;
     justify-content: center;
