--- a/app/assets/stylesheets/chat_list.scss
+++ b/app/assets/stylesheets/chat_list.scss
@@ -11,6 +11,10 @@
 .list-group-item {
   display: flex;
   align-items: center;
+  margin-bottom: 10px;
+  .user-img {
+    margin-top: 10px;
+  }
 }
 
 .user-info {
