--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,41 +1,5 @@
-<nav class="navbar navbar-expand-md navbar-light fixed-top">
+<%= render partial: 'common/navbar' %>
 
-
-    <a href="#" class="title navbar-brand text-light font-weight-bold">M Chat</i></a>
-    <%# <button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#nav"><span class="navbar-toggler-icon"></span></button> %>
-
-
-    <div id="nav">
-       <%# <form action="#" class="search">
-          <input
-            type="text"
-            class="search__input"
-            placeholder="ユーザー名で検索"
-          />
-          <button class="search__button">
-            <i class="fas fa-search text-muted"></i>
-          </button>
-        </form> %>
-        <%# <form class="form-inline ml-3">
-            <div class="input-group">
-                <input type="text" class="form-control mr-2 search-box" placeholder="ユーザー名で検索"">
-                <div class="input-group-append">
-                    <button type="button" class="search-button"><i class="fas fa-search text-muted"></i></button>
-                </div>
-            </div>
-        </form> %>
-
-        <%= form_with(url: users_path, method: :get, local: true) do |f| %>
-          <%= f.text_field :search, :value => params[:search], :placeholder => "ユーザー名を入力" %>
-          <%= f.submit '検索する', :name => nil %>
-        <% end %>
-
-        <ui class="navbar-nav ">
-            <%= link_to "チャット一覧", chat_index_path, class: "nav-link text-light font-weight-bold px-3" %>
-            <%= link_to "自分のプロフィール", user_path(current_user[:id]), class: "nav-link text-light font-weight-bold px-3" %>
-        </ui>
-    </div>
-</nav>
 
 
 
@@ -44,6 +8,20 @@
   <section id="team" class="pb-5">
       <div class="container">
           <div class="row">
+            <div class="col-12">
+              <div class="search-box">
+                  <div class="card">
+                      <div class="card-body text-center">
+                            <%= form_with(url: users_path, method: :get, local: true) do |f| %>
+                              <%= f.text_field :search, class: "search-form", :value => params[:search], :placeholder => "ユーザー名を入力" %>
+                              <%= f.submit '検索する', :name => nil %>
+                            <% end %>
+                      </div>
+                  </div>
+              </div>
+            </div>
+
+
             <% @users.each do |user| %>
               <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                   <div class="user-box">
