--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: 'common/navbar' %>
 <div class="user-list">
   <div class="container">
     <% @current_user_chat_rooms.each do |current_user_chat_room| %>
