--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,3 +34,7 @@ body {
   font-family: sans-serif;
   background-color: #eee;
 }
+
+.stylish-shadow {
+  box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.25);
+}
