--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -1,3 +1,12 @@
+.user-show {
+  margin-top: 50px;
+}
+@media screen and (max-width: 767px) {
+  .user-show {
+    margin-top: 220px;
+  }
+}
+
 .usershowPage {
   background-color: #fff;
   .userInfo {
