--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -50,7 +50,7 @@
         <%= text_area :user, :self_introduction, maxlength: "1000", rows: "10", class:"form-control" %>
       </div>
       <div class="text-center">
-        <%= f.submit "はじめる", class: "btn submitBtn" %>
+        <%= f.submit "はじめる", class: "btn submitBtn stylish-shadow" %>
         <%= render "devise/shared/links" %>
       </div>
     <% end %>
