--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: 'common/navbar' %>
 
 <div class="container user-show" >
-  <div class='usershowPage'>
+  <div class='usershowPage stylish-shadow'>
     <div class='userInfo pb-3'>
       <div class='userInfo_img'>
         <%= image_tag @user.img_name.url(:thumb) %>
