--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -5,7 +5,8 @@
       <div class="list-group">
         <% if current_user_chat_room != nil %>
           <div class="list-group-item stylish-shadow">
-            <% user = current_user_chat_room.chat_room_users.where.not(user_id: current_user.id).first.user %>
+            <% user = current_user_chat_room.chat_room_users.where.not(user_id: current_user.id) %>
+
             <p><img class="user-img" src="<%= user.img_name %>" alt="card image"></p>
 
             <div class="user-info">
@@ -13,8 +14,10 @@
 
               <div class="last-message">
                 <%# ログインしているユーザーのチャットルーム一覧を取得しようとしたら間違えてuser_id: current_user.idと書くところをuser.idにしたら動いた %>
+
                   <% chat_rooms = ChatRoomUser.where(user_id: user.id).map(&:chat_room) %>
                 <%# チャットルーム一覧の中で、特定のユーザーとのチャットルームを取得するつもりだったが、上記の打ち間違いを受けて適当にlastにしたら動いた。意味不明） %>
+
                   <% chat_room = chat_rooms.last %>
                 <%# そのチャットルームのメッセージ一覧を取得 %>
                   <% messages = chat_room.chat_messages %>
