--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,26 +6,23 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class:"mt-5" }) do |f| %>
       <%= devise_error_messages! %>
 
-      <%# 選択した画像をプレビューする機能についてはrailsのバージョン違いの関係からおそらく2-7通りのコピペでは不可能 %>
-      <label for="file_photo" class="rounded-circle userProfileImg">
-        <div class="userProfileImg_description">画像をアップロード</div>
-        <i class="fas fa-camera fa-3x"></i>
-        <%= f.file_field :img_name, id: "file_photo" %>
-      </label>
-      <div class="userImgPreview" id="userImgPreview">
-        <img id="thumbnail" class="userImgPreview_content" accept="image/*" src="">
-        <p class="userImgPreview_text">画像をアップロード済み</p>
-      </div>
-<% 
-=begin
-%>    //　もし画像アップロードの表示がわかりづらければシンプルに以下コードを挿入して13行目を削除しても動きそう
+      <%# 選択した画像をプレビューする機能についてはrailsのバージョン違いの関係からおそらくtechpitのtinder教材2-7通りのコピペでは不可能かつnilエラーを出したときにレイアウトが崩れる %>
+      <%# <label for="file_photo" class="rounded-circle userProfileImg"> %>
+        <%# <div class="userProfileImg_description">画像をアップロード</div> %>
+        <%# <i class="fas fa-camera fa-3x"></i> %>
+        <%# <%= f.file_field :img_name, id: "file_photo" %>
+      <%# </label> %>
+      <%# <div class="userImgPreview" id="userImgPreview"> %>
+        <%# <img id="thumbnail" class="userImgPreview_content" accept="image/*" src=""> %>
+        <%# <p class="userImgPreview_text">画像をアップロード済み</p> %>
+      <%# </div> %>
+
+      <%# //　妥協案として以下コードにでも会員登録可能 %>
       <div class="form-group">
-        画像:
+        画像　
         <%= f.file_field :img_name %>
       </div>
-<%
-=end
-%>
+
       <div class="form-group">
         <label>名前</label>
         <%= f.text_field :name, class: "form-control", placeholder: "名前を入力してください" %>
