wrote the first integration test for user

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
       <%# //　妥協案として以下コードにでも会員登録可能 %>
       <div class="form-group">
         画像　
-        <%= f.file_field :img_name %>
+        <%= f.file_field :img_name, id: "profile_picture" %>
       </div>
 
       <div class="form-group">
