showed the flash message in login page

--- a/app/assets/stylesheets/users/sign_up.scss
+++ b/app/assets/stylesheets/users/sign_up.scss
@@ -5,10 +5,10 @@ body {
   overflow: visible;
 }
 
-.notice,
-.alert {
-  display: none;
-}
+// .notice,
+// .alert {
+//   display: none;
+// }
 
 .sinupPage {
   .header {
