--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,6 +2,7 @@
   <div class='header'>アカウント編集</div>
   <div class='container'>
     <%= form_for current_user, url: registration_path(current_user) do |f| %>
+      <%= devise_error_messages! %>
       <div class="form-group">
         <%= f.label '名前' %>
         <%= f.text_field :name, class: "form-control", id: "name-edit" %>
