--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -102,7 +102,7 @@
   background-color: #6c757d;
   border-color: #6c757d;
   color: #495057;
-  cursor: auto;
+  pointer-events: none;
 }
 
 @media screen and (max-width: 767px) {
