--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -35,6 +35,7 @@
         overflow: hidden;
         & > img {
           width: 100%;
+          height: 100%;
         }
       }
     }
@@ -49,6 +50,12 @@
       margin-bottom: 24px;
       &__name {
         color: #45494b;
+        .chat-user-img {
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          overflow: hidden;
+        }
       }
       &__text {
         position: relative;
