--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,6 +1,6 @@
 <div class="message">
   <span class="message__name">
-    <%= chat_message.user.name %>:
+    <img class="chat-user-img mr-2" src="<%= chat_message.user.img_name %>"><%= chat_message.user.name %>:
   </span>
   <% if chat_message.user.id == current_user.id %>
     <div class="message__text message_current_user">
