--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,10 +8,13 @@
               <div class="search-box">
                   <div class="card stylish-shadow">
                       <div class="card-body text-center">
-                            <%= form_with(url: users_path, method: :get, local: true) do |f| %>
-                              <%= f.text_field :search, class: "search-form", :value => params[:search], :placeholder => "ユーザー名を入力" %>
-                              <%= f.submit '検索する', :name => nil %>
-                            <% end %>
+                        <%= form_with(url: users_path, method: :get, local: true) do |f| %>
+                          <%= f.text_field :search, class: "search-form", :value => params[:search], :placeholder => "ユーザー名を入力" %>
+                          <%= f.submit '検索する', :name => nil, 'data-disable-with' => false %>
+                            <button type="submit" name="format" value="csv" class="csv-btn mt-2">
+                              <i class="fa fa-file-text" title="入力されたフォームでの検索結果を出力します"></i>
+                            </button>
+                        <% end %>
                       </div>
                   </div>
               </div>
